# wordly-bot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  feedback_log.txt  five_letter_words.txt  git  pyproject.toml  requirements.txt  test.txt  wordly_helper_bot.py
.github/workflows/: .env  deploy.yml  docker-compose.override.yml  main.yml
.github/workflows_disabled/: docker-compose.override.yml
wordly_helper_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
